--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0048)http://csci571.com/hw/hw2/ScrambleThisTable.html -->
 <html>
 <head>
-<title>HomeWork of Peiyuan Liu</title>
+<title>CSCI-599 Team MapChat</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <style>
 table, th, td {
@@ -19,14 +19,13 @@ th, td {
 <table style="width:60%" align="center">
   <tbody>
   <tr>
-    <td>Link to Homework #7</td>
     <td>
         <a href="#">Link to Paper</a><br/>
     </td>
   </tr>
   <tr>
-    <td>Link to Homework #9</td>
-    <a href="#">Link to Video</a><br/>
+    <td><a href="#">Link to Video</a><br/>
+    </td>
   </tr>
   </tbody></table>
 
