--- a/index.html
+++ b/index.html
@@ -1,33 +1,272 @@
 <!DOCTYPE html>
-<!-- saved from url=(0048)http://csci571.com/hw/hw2/ScrambleThisTable.html -->
-<html>
+<html lang="en">
 <head>
-<title>CSCI-599 Team MapChat</title>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<style>
-table, th, td {
-  border: 5px solid black;
-  border-collapse: collapse;
-}
-th, td {
-  padding: 5px;
-}
-</style>
+    <meta charset="UTF-8">
+    <title>Mapchat</title>
+
+    <style>
+        body{
+            overflow-x: hidden;
+        }
+        /*Navigation Bar*/
+
+        #navBar{
+            height: 36px;
+            background-color: white;
+            position: fixed;
+            z-index: 100;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            left: 0;
+            top: 0;
+        }
+
+
+        #mapchat {
+            position: absolute;
+            left: 14%;
+            top: 40%;
+            font-family: "Times New Roman";
+            font-style: italic;
+            font-size: 100%;
+            color: rgb(139,41,39);
+        }
+
+        #bar {
+            font-family: "Times New Roman";
+            position: absolute;
+            right: 14%;
+            top: 35%;
+            color: rgb(139,41,39);
+        }
+
+
+        /*firstBlock*/
+
+        #firstBlock {
+            background-color: rgb(139,41,39);
+            height: 60%;
+            width: 100%;
+            background-size: 105%;
+            margin-left: -9px;
+            position: absolute;
+        }
+
+        #firstBlock img {
+            position: absolute;
+            left: 20%;
+            top: 5%;
+        }
+
+        #inFirstBlock {
+            background-color: rgb(139,41,39);
+            position: absolute;
+            top: 45%;
+            left: 30%;
+            width: 40%;
+            height: 5%;
+        }
+
+        #wordsBesideWoman b {
+            position: relative;
+            top: -8px;
+        }
+
+        #migiBell2 {
+            font-family: "Times New Roman";
+            font-style: italic;
+            font-size: 120%;
+            color: white;
+            margin-bottom: 0;
+        }
+
+        #video {
+            position: absolute;
+            left: 15%;
+            height: 350px;
+            top: 70%;
+        }
+
+        /*SecondBlock*/
+        #secondBlock{
+            position: absolute;
+            margin-top: -8px;
+            height: 450px;
+            width: 100%;
+            top: 170%;
+            margin-left: -8px;
+        }
+
+        #connect {
+            color: rgb(51, 117, 178);
+        }
+
+        #lane1 {
+            background-color: #5097B9;
+            float: left;
+            width: 20%;
+            height: 65%;
+        }
+
+        #lane2 {
+            background-color: #49277C;
+            float: left;
+            width: 20%;
+            height: 65%;
+
+        }
+
+        #lane3 {
+            background-color: #996CBF;
+            float: left;
+            width: 20%;
+            height: 65%;
+        }
+
+        #lane4 {
+            background-color: #49277C;
+            float: left;
+            width: 20%;
+            height: 65%;
+        }
+
+        #lane5 {
+            background-color: #5097B9;
+            float: left;
+            width: 20%;
+            height: 65%;
+        }
+
+        .secBloFont {
+            font-family: Sans-serif;
+            font-size: 150%;
+            color: white;
+            position: relative;
+            left: 13%;
+            top: 40%;
+        }
+
+        .secBloFont p {
+            font-size: 60%;
+        }
+
+
+        /*forthBlock*/
+
+        #forthBlock {
+            background-color: rgb(139,41,39);
+            position:absolute;
+            height: 100px;
+            margin-left: -8px;
+            width: 103%;
+            top: 245%;
+        }
+
+        #forBloFont {
+            font-family: raleway;
+            position: relative;
+            left: 12%;
+            top: 23%;
+            color: white;
+            font-size: 190%;
+            margin: 0;
+        }
+
+        #forBloFont p:first-child {
+            font-size: 45%;
+        }
+
+
+    </style>
+
 </head>
+<header>
+    <div id="navBar">
+        <span id="mapchat">
+            Mapchat
+        </span>
+        <span id="bar">
+            <a> CSCI 599 &nbsp &nbsp</a>
+        </span>
+    </div>
+</header>
 <body>
-
-<table style="width:60%" align="center">
-  <tbody>
-  <tr>
-    <td>
-        <a href="#">Link to Paper</a><br/>
-    </td>
-  </tr>
-  <tr>
-    <td><a href="#">Link to Video</a><br/>
-    </td>
-  </tr>
-  </tbody></table>
+<!-- Navigation Bar -->
 
 
-</body></html>	
+<!-- First Block -->
+<div id="firstBlock">
+    <img src="mapchat.jpg" width="60%">
+</div>
+
+<div id="inFirstBlock">
+    &nbsp&nbsp<a href='#' id="migiBell2">Technical Paper of Mapchat</a>
+</div>
+
+<div id="videoDiv">
+    <iframe id="video" width="520" height="280"
+            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    </iframe>
+</div>
+
+<!-- Second Block -->
+
+<div id="secondBlock">
+    <div id="connect">
+        <p align="center">Connect us on LinkedIn</p>
+    </div>
+    <div id="lane1" class="projects">
+        <div class="secBloFont">
+            <p>Bailin Chen</p>
+            <a href="https://www.linkedin.com/in/bailin-chen-2b1a9812a/">
+                <img src="linkedIn.png" width="40px">
+            </a>
+        </div>
+    </div>
+    <div id="lane2" class="projects">
+        <div class="secBloFont">
+            <p>Spencer Ortega</p>
+            <a href="https://www.linkedin.com/in/spencer-ortega/">
+                <img src="linkedIn.png" width="40px">
+            </a>
+        </div>
+    </div>
+    <div id="lane3" class="projects">
+        <div class="secBloFont">
+            <p>Sriya Mahankali</p>
+            <a href="https://www.linkedin.com/in/sriyamahankali/">
+                <img src="linkedIn.png" width="40px">
+            </a>
+        </div>
+    </div>
+    <div id="lane4" class="projects">
+        <div class="secBloFont">
+            <p>Supreeth Kabbin</p>
+            <a href="https://www.linkedin.com/in/supreethkabbin/">
+                <img src="linkedIn.png" width="40px">
+            </a>
+        </div>
+    </div>
+    <div id="lane5" class="projects">
+        <div class="secBloFont">
+            <p>Peiyuan Liu</p>
+            <a href="https://www.linkedin.com/in/peiyuan-liu-b11138175/">
+                <img src="linkedIn.png" width="40px">
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- Fourth Block -->
+<div id="forthBlock">
+    <div id="forBloFont">
+        <p>CSCI 599 Mapchat Team</p>
+        <a href="https://github.com/mapchat2020/mapchat">
+            <img src="github.png" width="15px">
+        </a>
+    </div>
+</div>
+
+</body>
+</html>
