--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
 </div>
 
 <div id="inFirstBlock">
-    &nbsp&nbsp<a href='#' id="migiBell2">Technical Paper of Mapchat</a>
+    &nbsp&nbsp
+    <a href="MapChat_ Technical Paper.pdf" type="application/pdf" id="migiBell2" target="_blank">
+        Technical Paper of Mapchat
+    </a>
 </div>
 
 <div id="videoDiv">
