--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <div id="inFirstBlock">
     &nbsp&nbsp
-    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fdocument%2Fd%2F1a6UIAaI8DdkafSDMLBCOK_ZqZYSSkPxT_eymSjeEft4%2Fedit%3Ffbclid%3DIwAR1s_o_62P74lOYGc3OjlBxbBek1firi0H0vdyU9CFGUNWfCj9pNIf0arCw&h=AT0DFeZ513ZEh5XlF9GIzcScck3EzgTJHAsOiO80C38Sd8BR6MPGV7uHhqy3dGDBW5kyuKNEGIvIyi7rvGgYJppJ8p7uvBP3XI3rR3TlIf5hwu-QekqxcyNeKARrNbUYGaXeH24yEqw" id="migiBell2" target="_blank">
+    <a href="https://docs.google.com/document/d/1a6UIAaI8DdkafSDMLBCOK_ZqZYSSkPxT_eymSjeEft4/edit?fbclid=IwAR0IMotEzAhIpcVb7xfbj_aGF7-pb0wyregnfHTleyt-mDHlvMMdbY9yhTo" id="migiBell2" target="_blank">
         Technical Paper of Mapchat
     </a>
 </div>
