--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             top: 40%;
             font-style: italic;
             font-size: 135%;
-            color: rgb(139,41,39);
+            color: rgb(145, 32, 27);
         }
 
         #bar {
             position: absolute;
             right: 14%;
             top: 35%;
-            color: rgb(139,41,39);
+            color: rgb(145, 32, 27);
         }
 
 
         /*firstBlock*/
 
         #firstBlock {
-            background-color: rgb(139,41,39);
+            background-color: rgb(145, 32, 27);
             height: 60%;
             width: 100%;
             background-size: 105%;
@@ -58,7 +58,7 @@
         }
 
         #inFirstBlock {
-            background-color: rgb(139,41,39);
+            background-color: rgb(145, 32, 27);
             position: absolute;
             top: 45%;
             left: 38%;
@@ -151,9 +151,9 @@
         /*forthBlock*/
 
         #forthBlock {
-            background-color: rgb(139,41,39);
+            background-color: rgb(145, 32, 27);
             position:absolute;
-            height: 33%;
+            height: 35%;
             margin-left: -8px;
             width: 103%;
             top: 237%;
@@ -193,7 +193,7 @@
 
 <!-- First Block -->
 <div id="firstBlock">
-    <img src="mapchat.jpg" width="60%">
+    <img src="mapchat.png" width="60%">
 </div>
 
 <div id="inFirstBlock">
@@ -205,7 +205,7 @@
 </div>
 
 <div id="videoDiv">
-    <iframe id="video" width="850" height="500"
+    <iframe id="video" width="870" height="500"
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
     </iframe>
 </div>
