--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
 
 <div id="secondBlock">
     <div id="connect">
-        <p align="center">Connect us on LinkedIn</p>
+        <p align="center">
+            <img src="linkedIn.png" width="25px"> Connect us on LinkedIn
+        </p>
     </div>
     <div id="lane1" class="projects">
         <div class="secBloFont">
