--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
 </div>
 
 <div id="videoDiv">
-    <iframe id="video" width="870" height="500"
-            src="https://www.youtube.com/embed/tgbNymZ7vqY">
+    <iframe id="video" src="https://drive.google.com/file/d/1BSzBCUZntA2cfpXDH1Vy_6S2etEk5EXT/preview" width="870" height="500">
     </iframe>
 </div>
 
