--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 <div id="secondBlock">
     <div id="connect">
         <p align="center">
-            <img src="linkedIn.png" width="25px"> Connect us on LinkedIn
+            <img src="linkedIn.png" width="25px"> Connect with us on LinkedIn
         </p>
     </div>
     <div id="lane1" class="projects">
