--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <div id="inFirstBlock">
     &nbsp&nbsp
-    <a href="https://docs.google.com/document/d/1a6UIAaI8DdkafSDMLBCOK_ZqZYSSkPxT_eymSjeEft4/edit?fbclid=IwAR0IMotEzAhIpcVb7xfbj_aGF7-pb0wyregnfHTleyt-mDHlvMMdbY9yhTo" id="migiBell2" target="_blank">
+    <a href="MapChat_Technical Paper.pdf" id="migiBell2" target="_blank">
         Technical Paper of Mapchat
     </a>
 
