--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@
             font-size: 45%;
         }
 
+        #prof {
+            position: absolute;
+            right: 27%;
+            font-size: 45%;
+            top: -25%;
+        }
+
 
     </style>
 
@@ -263,6 +270,7 @@
 <div id="forthBlock">
     <div id="forBloFont">
         <p>CSCI 599 Mapchat Team</p>
+        <p id="prof">Professor Mike Zyda</p>
         <a href="https://github.com/mapchat2020/mapchat">
             <img src="github.png" width="30px">
         </a>
