--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
             background-color: rgb(145, 32, 27);
             position: absolute;
             top: 45%;
-            left: 38%;
+            left: 34%;
             width: 70%;
             height: 5%;
+            font-size: 200%;
+            color: white;
         }
 
         #wordsBesideWoman b {
@@ -71,11 +73,19 @@
             top: -8px;
         }
 
+        .icon {
+            filter: invert(100%);
+            -webkit-filter: invert(100%);
+        }
+
         #migiBell2 {
             font-style: italic;
-            font-size: 200%;
-            color: white;
             margin-bottom: 0;
+        }
+
+        .slides {
+            font-size: 100%;
+
         }
 
         #video {
@@ -204,11 +214,19 @@
 </div>
 
 <div id="inFirstBlock">
-    &nbsp&nbsp
+    Paper:
     <a href="MapChat_Technical Paper.pdf" id="migiBell2" target="_blank">
-        Technical Paper of Mapchat
-    </a>
-
+        <img src="paper.png" width="30px" class="icon"></a>
+    &nbsp&nbsp&nbsp&nbsp
+    Slide:
+    <a href="https://docs.google.com/presentation/d/1F9WxqFLCruQJEh1jSglgQhlj3CjqRwOZlFrp6PMq3oM/edit#slide=id.g844152021c_0_26"
+    class="slides" target="_blank">
+        <img src="ppt.png" width="30px" class="icon"></a>
+    &nbsp&nbsp&nbsp&nbsp
+    Github:
+    <a href="https://github.com/mapchat2020/mapchat"
+       class="slides" target="_blank">
+        <img src="github.png" width="30px" class="icon"></a>
 </div>
 
 <div id="videoDiv">
