--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <img src="paper.png" width="30px" class="icon"></a>
     &nbsp&nbsp&nbsp&nbsp
     Slide:
-    <a href="https://docs.google.com/presentation/d/1F9WxqFLCruQJEh1jSglgQhlj3CjqRwOZlFrp6PMq3oM/edit#slide=id.g844152021c_0_26"
+    <a href="pre.pdf"
     class="slides" target="_blank">
         <img src="ppt.png" width="30px" class="icon"></a>
     &nbsp&nbsp&nbsp&nbsp
