--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <img src="ppt.png" width="30px" class="icon"></a>
     &nbsp&nbsp&nbsp&nbsp
     Github:
-    <a href="https://github.com/mapchat2020/mapchat"
+    <a href="https://github.com/csci-599-applied-ml-for-games/MapChat"
        class="slides" target="_blank">
         <img src="github.png" width="30px" class="icon"></a>
 </div>
